# class/classRouter.js
@@ -8,9 +8,6 @@ router.get('/all', ClassController.getAllClasses);
 router.post('/delete/:id', ClassController.deleteClass);
 router.post('/addtoclass/:id', ClassController.addToClass);
 router.post('/removefromclass/:id', ClassController.removeFromClass);
-
-
-/*router.post('/update/:id', ClassController.updateStudent);
-router.get('/:id', ClassController.getStudent);*/
+router.get('/todaysClasses', ClassController.getTodaysClasses);
 
 module.exports = router;
